waarom wil imvertor niet pushen naar dit repo?
Misschien omdat de data folder nog niet bestaat?

--- a/imvertor/Imvertor.properties
+++ b/imvertor/Imvertor.properties
@@ -2,7 +2,9 @@ passoffice = git
 createimagemap = yes
 usefirstmap = yes
 gitpath = /Geonovum/geonovum-allemodellen
+#gitpath = /Geonovum/dso-cim-ow
 #createmimformat = yes
 #mimformattype = xml
 mapping = NEN3610_2022
 nativescalars = no
+
