--- a/imvertor/Imvertor.properties
+++ b/imvertor/Imvertor.properties
@@ -2,9 +2,7 @@ passoffice = git
 createimagemap = yes
 usefirstmap = yes
 gitpath = /Geonovum/geonovum-allemodellen
-#gitpath = /Geonovum/dso-cim-ow
-#createmimformat = yes
-#mimformattype = xml
+createmimformat = yes
+mimformattype = xml
 mapping = NEN3610_2022
 nativescalars = no
-
